--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,14 @@ Flask==0.10.1
 Flask-Compass==0.2
 Jinja2==2.7.3
 MarkupSafe==0.23
+PyExecJS==1.0.4
+PyReact==0.4.0
 Werkzeug==0.9.6
 argparse==1.2.1
+ipython==2.2.0
 itsdangerous==0.24
+praw==2.1.18
+requests==2.4.1
 six==1.8.0
+update-checker==0.10
 wsgiref==0.1.2
