--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,14 @@ Jinja2==2.7.3
 MarkupSafe==0.23
 PyExecJS==1.0.4
 PyReact==0.4.0
+PyYAML==3.11
 Werkzeug==0.9.6
 argparse==1.2.1
 gunicorn==19.1.1
 ipython==2.2.0
 itsdangerous==0.24
 praw==2.1
+redis==2.10
 requests==2.5.1
 six==1.9.0
 update-checker==0.11
