--- a/requirements.txt
+++ b/requirements.txt
@@ -4,16 +4,16 @@ Flask-Compass==0.2
 Flask-Login==0.2.11
 Jinja2==2.7.3
 MarkupSafe==0.23
-PyExecJS==1.1
-PyReact==0.5
+PyExecJS==1.1.0'
+PyReact==0.5.2'
 PyYAML==3.11
 Werkzeug==0.9.6
 argparse==1.2.1
 gunicorn==19.1.1
 ipython==2.2.0
 itsdangerous==0.24
-praw==2.1
-redis==2.10
+praw==2.1.20'
+redis==2.10.3'
 requests==2.5.1
 six==1.9.0
 update-checker==0.11
