--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-Flask==0.10.1
+Flask>=0.10.1,<=0.11
 Flask-Assets==0.10
 Flask-Compass==0.2
-Flask-Login==0.2.11
+Flask-Login>=0.2.11
 Jinja2==2.7.3
 MarkupSafe==0.23
 PyExecJS==1.1.0
@@ -10,11 +10,11 @@ PyYAML==3.11
 Werkzeug==0.9.6
 argparse==1.2.1
 gunicorn==19.1.1
-ipython==2.2.0
+ipython>=2.2.0
 itsdangerous==0.24
-praw==2.1.20
-redis==2.10.3
-requests==2.5.1
+praw>=2.1.20,<=3.0
+redis>=2.10.3,<=3.0
+requests>=2.5.1
 six==1.9.0
 update-checker==0.11
 webassets==0.10.1
