Add settings for docker compose

--- a/snueue/config/sample-secrets.env
+++ b/snueue/config/sample-secrets.env
@@ -1,10 +1,10 @@
----
+# Copy this file into secrets.env and fill in the required values
+
 # This should be a secure and secret value
-SNUEUE_REDDIT_USER_AGENT: Snueue development testing by \u\<yourusername>
+SNUEUE_REDDIT_USER_AGENT=Snueue development testing by \u\<yourusername>
 # This should be a secure and secret value
-SNUEUE_SECRET_KEY: secret
+SNUEUE_SECRET_KEY=secret
 # To connect to reddit via oauth, you'll need to create an app on reddit.com/prefs/apps
 # More info: https://github.com/reddit/reddit/wiki/OAuth2
-SNUEUE_REDDIT_CLIENT_ID:
-SNUEUE_REDDIT_CLIENT_SECRET:
-...
+SNUEUE_REDDIT_CLIENT_ID=
+SNUEUE_REDDIT_CLIENT_SECRET=
