--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,8 @@
 Flask>=0.10.1,<=0.11
 Flask-Assets==0.10
 Flask-Login>=0.2.11
-PyExecJS==1.1.0
-PyReact==0.5.2
-PyYAML==3.11
+PyReact>=0.5.2
+PyExecJS>=1.1.0
 gunicorn==19.1.1
-ipython>=2.2.0
 praw>=2.1.20,<=3.0
 redis>=2.10.3,<=3.0
-webassets==0.10.1
