--- a/compose/common.yml
+++ b/compose/common.yml
@@ -2,4 +2,4 @@ web:
   build: .
   environment:
     - SNUEUE_DATABASE_HOST=database
-  env_file: ./snueue/config/secrets.env
+  env_file: ../snueue/config/secrets.env
