--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ python:
   - "3.4"
 before_install:
   - gem install compass
+  - node install -g browserify babelify
 install:
   - pip install -r requirements.txt
-  - python script/collectstatic.py
 script:
   - script/test
