--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
   - "3.4"
 before_install:
   - gem install compass
-  - npm install -g browserify babelify
+  - npm install -g browserify && npm install --save-dev babelify
 install:
   - pip install -r requirements.txt
 script:
